--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "icons": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tool-tip": "^4.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
